# home-assistant-whatsapp

./: CHANGELOG.md  NOTICE  README.md  RELEASING.md  hacs.json  pyproject.toml  repository.yaml
.github/workflows/: build-waha.yml  release.yml  validate.yml
custom_components/waha_whatsapp/: __init__.py  api.py  config_flow.py  const.py  diagnostics.py  helpers.py  manifest.json  notify.py  services.yaml
custom_components/waha_whatsapp/translations/: en.json
scripts/: check_version.py
tests/: __init__.py  _loader.py  test_api.py  test_helpers.py  test_metadata.py  test_waha_app_metadata.py
waha/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  discovery.mjs  run.mjs
waha/tests/: discovery.test.mjs
